fix previews being too big, leading to scrollbar

--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ input {
 }
 
 .preview {
-  height: 99vh;
+  height: 98vh;
 }
 
 .info-container {
